# geo_simulator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml
docs/: API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  Purpose.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: AllPersonasScreen.tsx  AnalyticsDashboard.tsx  EmptyDashboard.tsx  ICPGenerationScreen.tsx  InsightsRecommendations.tsx  IntentAnalysisScreen.tsx  LLMSimulationScreen.tsx  LandingScreen.tsx  PersonaSimulationEngine.tsx  PipelineIcons.tsx  PipelineProgress.tsx  PipelineStage.tsx  PreFlightChecker.tsx  PromptGenerationScreen.tsx  ReportDashboard.tsx  ScrapingScreen.tsx  SimulationFlow.tsx  UrlInputForm.tsx
frontend/src/data/: constants.ts  index.ts
frontend/src/hooks/: usePipeline.ts
frontend/src/lib/: url-utils.ts
frontend/src/pages/: BrandAnalysis.tsx  Dashboard.tsx  Login.tsx  PipelineDemo.tsx  SimulationDetail.tsx  WebsiteDetail.tsx  Websites.tsx
frontend/src/services/: analytics.ts  api.ts  auth.ts  icps.ts  simulations.ts  websites.ts  websocket.ts
migrations/: env.py
migrations/versions/: 20260117_0001_001_initial_schema.py  20260118_0001_002_aggregated_metrics.py
services/: __init__.py
services/analyzer/: __init__.py
services/api/: __init__.py  llm_simulator.py  main.py
services/api/app/: main.py  (+1 more)
services/brand_detector/: __init__.py  schemas.py
services/classifier/: __init__.py  classifier.py  main.py  prompts.py  schemas.py
services/competitive_intel/: schemas.py
services/conversation_generator/: __init__.py  generator.py  main.py  prompts.py  schemas.py
services/graph_builder/: __init__.py  schemas.py
services/icp_generator/: __init__.py  generator.py  main.py  prompts.py  schemas.py
services/scraper/: __init__.py  main.py  schemas.py  scraper.py
services/simulation/: __init__.py  main.py  schemas.py
services/simulator/: __init__.py
shared/: __init__.py  config.py
shared/db/: __init__.py  init_db.py  neo4j_client.py  neo4j_schema.py  postgres.py  postgres_client.py  redis.py  redis_client.py
shared/graph/: __init__.py  client.py
shared/llm/: __init__.py  anthropic_client.py  base.py  factory.py  google_client.py  openai_client.py
shared/models/: __init__.py  aggregated_metrics.py  base.py  brand.py  competitive.py  conversation.py  enums.py  icp.py  schemas.py  simulation.py  user.py  website.py
shared/queue/: __init__.py  celery_app.py
shared/utils/: __init__.py  hashing.py  jwt.py  logging.py
tests/: __init__.py  conftest.py
tests/integration/: test_simulation_analyzers.py
tests/unit/: test_config.py  test_utils.py
(+119 files in other folders)
