[tool.poetry]
name = "llm-brand-monitor"
version = "0.1.0"
description = "LLM Brand Influence Monitor - AI Visibility & Trust Platform"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [
    { include = "shared" },
    { include = "services" },
]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Database
sqlalchemy = { extras = ["asyncio"], version = "^2.0.25" }
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# Redis
redis = { extras = ["hiredis"], version = "^5.0.1" }

# Neo4j
neo4j = "^5.16.0"

# Elasticsearch/OpenSearch
elasticsearch = "^8.12.0"

# Task Queue
celery = { extras = ["redis"], version = "^5.3.6" }
flower = "^2.0.1"

# HTTP Client
httpx = "^0.26.0"
aiohttp = "^3.9.1"

# Web Scraping
playwright = "^1.41.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"

# LLM Clients
openai = "^1.10.0"
anthropic = "^0.18.0"
google-generativeai = "^0.3.2"

# Data Processing
pandas = "^2.1.4"
numpy = "^1.26.3"

# Utilities
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
tenacity = "^8.2.3"
structlog = "^24.1.0"

# AWS
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"
factory-boy = "^3.3.0"
faker = "^22.0.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
api = "services.api.app.main:run"
worker = "services.worker:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --cov=shared --cov=services --cov-report=term-missing"
